--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -4,6 +4,7 @@
 
 $unit: 1rem;
 $nav-height: 38px;
+$mobile-nav-height: 58px;
 $toolbar-shadow-reverse: 0px -3px 5px -1px rgba(0, 0, 0, 0.2), 0px -5px 8px 0px rgba(0, 0, 0, 0.14), 0px -1px 14px 0px rgba(0, 0, 0, 0.12);
 
 $base-font-family:                  "Open Sans", Helvetica, Arial, sans-serif;
@@ -886,13 +887,13 @@ img.responsive {
 .mdc-card__supporting-text,
 .mdc-typography--subheading2,
 .mdc-simple-menu .mdc-list-item,
-.mdc-temporary-drawer .mdc-list-item,
+.mdc-drawer--temporary .mdc-list-item,
 .mdc-list {
   font-family: $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $base-font-weight;
   letter-spacing: 0.01rem;
 }
-.mdc-temporary-drawer .mdc-list-item {
+.mdc-drawer--temporary .mdc-list-item {
   font-weight: 600;
 }
 .mdc-card__title,
@@ -1778,6 +1779,11 @@ form#settled_status {
         font-size: 1.7rem;
       }
     }
+    .mdc-top-app-bar__navigation-icon {
+      height: $mobile-nav-height;
+      width: auto;
+      padding: 0;
+    }
     .mdc-toolbar__icon--menu:focus {
       outline: none;
     }
@@ -1807,22 +1813,30 @@ form#settled_status {
   padding: 100px+$nav-height 0 0;
   margin: 0;
 }
-.mdc-temporary-drawer {
+.mdc-drawer--temporary {
   display: none;
-  .mdc-temporary-drawer__header,
-  .mdc-temporary-drawer__header-content {
-    height: 58px;
+  .mdc-drawer--temporary__header,
+  .mdc-drawer--temporary__header-content {
+    height: $mobile-nav-height;
   }
-  .mdc-temporary-drawer__header-content {
+  .mdc-drawer--temporary__header-content {
     direction: ltr;
     padding: 0 $unit*0.7;
     -webkit-box-align: center;
     align-items: center;
   }
-  // .mdc-temporary-drawer__header:before {
+  .mdc-drawer__header-content {
+    img {
+      max-width: 100%;
+    }
+  }
+  .mdc-drawer__header::before {
+    padding-top: 38%;
+  }
+  // .mdc-drawer--temporary__header:before {
   //     padding-top: 24%;
   // }
-  .mdc-list-group {
+  .mdc-drawer__content {
     direction: ltr;
     .mdc-list {
       .mdc-list-item {
@@ -1836,13 +1850,13 @@ form#settled_status {
   }
 }
 
-.mdc-temporary-drawer__drawer {
+.mdc-drawer--temporary__drawer {
   display: -webkit-box !important;
   -webkit-transition: all .195s ease !important;
   -webkit-transform: translateX(400px) !important;
 }
-.mdc-temporary-drawer--open {
-  .mdc-temporary-drawer__drawer {
+.mdc-drawer--temporary--open {
+  .mdc-drawer--temporary__drawer {
     -webkit-transform: none !important;
   }
 }
@@ -2301,10 +2315,11 @@ body.scottish-charity-awards:not(.post) {
     background-color: #b0be48;
   }
 }
-// .mdc-temporary-drawer,
+// .mdc-drawer--temporary,
 .hidden {
   display: none !important;
 }
+.hide-lg,
 .about.staff-team .post-info-author,
 .about.work-with-us .page-info,
 .digital.charter-fund.projects .page-info,
@@ -3170,25 +3185,27 @@ body.post.author {
     opacity: 0.1;
   }
 }
-.mdc-list {
-  .mdc-list-item {
-    padding: 0;
-    height: auto;
-  }
-  .mdc-list-item:hover {
-    text-decoration: none;
-    .mdc-list-item__text {
-      text-decoration: underline;
+.community-jobs-scotland .page {
+  .mdc-list {
+    .mdc-list-item {
+      padding: 0;
+      height: auto;
     }
-    .mdc-list-item__meta {
+    .mdc-list-item:hover {
       text-decoration: none;
+      .mdc-list-item__text {
+        text-decoration: underline;
+      }
+      .mdc-list-item__meta {
+        text-decoration: none;
+      }
     }
-  }
-  .mdc-list-item:hover::before,
-  .mdc-list-item:hover::after,
-  .mdc-list-item:focus::before,
-  .mdc-list-item:focus::after {
-    opacity: 0 !important;
+    .mdc-list-item:hover::before,
+    .mdc-list-item:hover::after,
+    .mdc-list-item:focus::before,
+    .mdc-list-item:focus::after {
+      opacity: 0 !important;
+    }
   }
 }
 
@@ -3802,7 +3819,8 @@ footer {
 }
 
 @media screen and (max-width: 991px) {
-  .mdc-temporary-drawer {
+  .hide-lg,
+  .mdc-drawer--temporary {
     display: block;
   }
   .mdc-toolbar {
@@ -3883,16 +3901,16 @@ footer {
     padding-top: 0;
   }
   .mdc-toolbar .mdc-toolbar__row .container-fluid .mdc-toolbar__icon {
-    height: 58px;
+    height: $mobile-nav-height;
   }
   .mdc-toolbar #upper-tab-bar,
   .mdc-toolbar .mdc-toolbar__icon,
   .mdc-toolbar .mdc-toolbar__row,
   .mdc-toolbar .mdc-form-field,
   .mdc-toolbar .mdc-toolbar__section {
-    max-height: 58px;
+    max-height: $mobile-nav-height;
   }
-  .mdc-temporary-drawer__header-content,
+  .mdc-drawer--temporary__header-content,
   .brand-logo {
     margin-left: 0;
     img {
@@ -3900,7 +3918,7 @@ footer {
     }
   }
   .mdc-toolbar-fixed-adjust {
-    padding-top: 58px;
+    padding-top: $mobile-nav-height;
   }
   .pagination-distance-9,
   .pagination-distance-8,
@@ -4113,6 +4131,9 @@ footer {
 @media screen and (max-width: 395px) {
   .pagination-distance-3 {
     display: none !important;
+  }
+  .mdc-toolbar .mdc-toolbar__row .container-fluid .search_form {
+    margin-right: $unit/2;
   }
 }
 
