Saved search JS that will eventually be ripped out

--- a/db/configurations/goodmoves/templates/vacancies/search-json.hbs
+++ b/db/configurations/goodmoves/templates/vacancies/search-json.hbs
@@ -12,5 +12,6 @@
     }{{#unless @last}},{{/unless}}
     {{/each}}
     ]
-  }
+    },
+    "query": {{{stringify data.search_data.detailed_results.request.query}}}
 }
