--- a/db/configurations/goodmoves/templates/vacancies/search.hbs
+++ b/db/configurations/goodmoves/templates/vacancies/search.hbs
@@ -5,3 +5,7 @@
 <div id="detailed-results-container" class="container-content goodmoves-vacancy-search">
   {{> vacancy_search_results this}}
 </div>
+
+<script>
+  var searchQuery = {{{stringify data.search_data.detailed_results.request.query}}};
+</script>
