--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -444,7 +444,7 @@ primary-dark: #263238
       );
     }
     .splash-image .header-caption {
-      max-width: 42%;
+      max-width: 40%;
     }
   }
   @media screen and (max-width: 991px) {
@@ -1684,6 +1684,7 @@ form#settled_status {
       }
       .mdc-toolbar__icon {
         height: $unit*2;
+        width: $unit*2;
         z-index: 100;
       }
       .mdc-toolbar__icon:focus {
@@ -1796,7 +1797,7 @@ form#settled_status {
     .mdc-toolbar__section.toolbar-search {
       vertical-align: middle;
       .mdc-textfield input {
-        max-width: 15rem;
+        max-width: 14rem;
       }
       .fa-search {
         font-size: 1.3rem;
@@ -2079,7 +2080,7 @@ form#settled_status {
     position: absolute;
     bottom: 0;
     right: 0;
-    max-width: 50%;
+    max-width: 46%;
     color: rgba(255, 255, 255, 0.8);
     background: rgba(0, 0, 0, 0.65);
     border-radius: $unit/4 $unit/4 0 0;
