--- a/db/configurations/scvo/templates/jobs/cjs-job-search.hbs
+++ b/db/configurations/scvo/templates/jobs/cjs-job-search.hbs
@@ -10,15 +10,12 @@
     </ul>
     <div class="mdc-layout-grid full">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content" style="padding-bottom: 0;">
           <p>
             Please view the opportunities available but if you cannot see a CJS job that would suit your customer then please contact the CJS team at <a href="mailto:communityjobsscotland@scvo.org.uk">communityjobsscotland@scvo.org.uk</a> with details and we can try and arrange an another opportunity.
           </p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-          {{> sidebar_cjs_search}}
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
           {{#ifAny request.params.query.q request.params.query.job_number request.params.query.location request.params.query.sector request.params.query.region ~}}
           {{#if data.primaryResponse.hits.total ~}}
           {{> search_info paging=data.primaryResponse.pagination}}
@@ -34,7 +31,7 @@
           </div>
           {{/if ~}}
           {{else}}
-          <div class="mdc-layout-grid cjs-search-list v-margin-full">
+          <div class="mdc-layout-grid cjs-search-list">
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <h2>Jobs by sector</h2>
@@ -627,6 +624,9 @@
             </div>
           </div>
           {{/ifAny ~}}
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
+          {{> sidebar_cjs_search}}
         </div>
         {{> footer_cjs}}
       </div>
