--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3198,6 +3198,10 @@ body.post.author {
   .apply-button {
     margin-left: $unit;
   }
+}
+
+.footer-main,
+.community-jobs-scotland .page-content {
   .mdc-list {
     .mdc-list-item {
       padding: 0;
