--- a/db/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/db/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -20,9 +20,19 @@
           {{> sidebar_cjs_search}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
-          {{#with data.primaryResponse.hits.hits.[0]._source ~}}
+          <p>
+            Please contact your local Jobcentre Plus or Skills Development Scotland advisor to access a CJS application form.
+          </p>
+          <p>
+            <a href="https://www.skillsdevelopmentscotland.co.uk/contact-us/">Find your nearest Skills Development Scotland office</a><br />
+            <a href="http://los.direct.gov.uk">Find your nearest Jobcentre Plus</a>
+          </p>
+          <p>
+            If you work for SDS or JCP please <a href="http://jobs.scvo.org.uk/Account/Login">log in here</a> to start the referral/application process.
+          </p>
+          <!-- {{#with data.primaryResponse.hits.hits.[0]._source ~}}
           Apply for {{{title}}}
-          {{/with ~}}
+          {{/with ~}} -->
         </div>
         {{> footer_cjs}}
       </div>
