--- a/db/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/db/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -7,11 +7,7 @@
       <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
       <li><a href="/jobs/community-jobs-scotland/vacancies">Vacancies</a></li>
       <li><a href="/jobs/community-jobs-scotland/vacancies/{{request.params.phase}}">Search</a></li>
-      <li>
-        <a href="/jobs/community-jobs-scotland/vacancies/{{request.params.phase}}/{{request.params.slug}}">
-          {{data.primaryResponse.hits.hits.[0]._source.title}}
-        </a>
-      </li>
+      <li><a href="/jobs/community-jobs-scotland/vacancies/{{request.params.phase}}/{{request.params.slug}}">{{data.primaryResponse.hits.hits.[0]._source.title}}</a></li>
       <li>Apply</li>
     </ul>
     <div class="mdc-layout-grid">
