--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -18,7 +18,7 @@
           </a>
           <span class="mdc-tab-bar__indicator"></span>
         </div> -->
-        <div id="search-view" class="search-form">
+        <form id="search-view" class="search-form" action="/search" method="GET">
           <div action="/search" method="get">
             <input type="hidden" name="lat" value="">
             <input type="hidden" name="lng" value="">
@@ -40,7 +40,13 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
                   <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                     <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button" onclick="geolocate();"></span>
-                    <input type="text" id="where-jobs" name="location" class="mdc-text-field__input" placeholder=" ">
+                    <input type="text" id="where-jobs" name="location" class="mdc-text-field__input" placeholder=" " data-location-options='
+                      {
+                        "types": ["(regions)"],
+                        "componentRestrictions": {
+                          "country": "gb"
+                        }
+                      }' data-location-lat="[name='lat']" data-location-lng="[name='lng']">
                     <label for="where-jobs" class="mdc-floating-label">
                       Location
                     </label>
@@ -67,7 +73,7 @@
                   </div>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-                  <button id="search-jobs" class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
+                  <button type="submit" id="search-jobs" class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
                     Search
                     <span class="far fa-search" aria-hidden="true"></span>
                   </button>
@@ -178,7 +184,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </form>
         <div id="browse-view" class="search-form" style="display: none;">
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
