--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1142,7 +1142,8 @@ section.search {
         font-size: 1rem;
       }
       .photo-wee {
-        max-width: 96px;
+        width: 96px;
+        height: 96px;
         margin-right: $unit;
         margin-bottom: $unit;
         float: left;
@@ -3876,6 +3877,10 @@ footer {
         border-right: none;
         padding-right: 0;
       }
+    }
+    .featured-content .featured .photo-wee {
+      height: 64px;
+      width: 64px;
     }
     .featured-content .featured-background-image.charity-awards {
       height: auto;
