--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -192,7 +192,7 @@
         <button type="button" onclick="goodmoves.toggleShortlistItem('{{Id}}');" class="mdc-card__action mdc-card__action--shortlist" title="Add to shortlist">
           <span class="fa-stack fa-lg">
             <span class="fas fa-circle fa-stack-2x" aria-hidden="true"></span>
-            <span class="far fa-star fa-stack-1x" aria-hidden="true"></span>
+            <span class="far fa-heart fa-stack-1x" aria-hidden="true"></span>
           </span>
         </button>
       </div>
