--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -454,7 +454,7 @@ a {
 }
 
 .mdc-button--raised {
-  background-size: 100% 1600%;
+  background-size: 100% 1800%;
   background-position: 0 0;
   background-image: linear-gradient(60deg, $mdc-theme-primary-dark 50%, $mdc-theme-primary 50.08%);
   transition: all 1s cubic-bezier(0, 1, 0.3, 1);
@@ -809,16 +809,16 @@ hr {
           font-size: $header-lower-height;
           color: white;
         }
-        .fa-star {
+        .fa-heart {
           font-size: 25px;
           line-height: $header-lower-height;
         }
       }
     }
-    .mdc-card__action--shortlist .fa-star {
+    .mdc-card__action--shortlist .fa-heart {
       color: $mdc-theme-primary-dark;
     }
-    .mdc-card__action--shortlist:hover .fa-star {
+    .mdc-card__action--shortlist:hover .fa-heart {
       font-weight: 900;
       // color: $mdc-theme-primary-dark;
     }
@@ -826,10 +826,10 @@ hr {
 }
 .mdc-card.vacancy-shortlisted {
   .mdc-card__actions {
-    .mdc-card__action--shortlist .fa-star {
+    .mdc-card__action--shortlist .fa-heart {
       font-weight: 900;
     }
-    .mdc-card__action--shortlist:hover .fa-star {
+    .mdc-card__action--shortlist:hover .fa-heart {
       font-weight: 400;
       color: $mdc-theme-primary-dark;
     }
@@ -1227,7 +1227,7 @@ body {
 }
 
 footer,
-.browse {
+.browse main {
   .mdc-list {
     .mdc-list-item {
       padding: 0;
@@ -1267,10 +1267,13 @@ footer,
     background-size: cover;
     background-repeat: no-repeat;
     .content {
-      background-color: rgba(255, 255, 255, 0.75);
-      padding: $unit*1.25;
-      margin: $unit*3 0;
+      background-color: rgba(255, 255, 255, 0.65);
+      padding: $unit/2 $unit*1.25 $unit*1.25;
+      margin: $unit*6 0;
       border-radius: 2px;
+      .mdc-text-field--box::before, .mdc-text-field--box::after {
+        width: 100%;
+      }
       .mdc-button--search {
         border-radius: 2px;
         width: 100%;
@@ -1364,7 +1367,7 @@ footer,
       // transition: all .1s ease-in-out;
       mix-blend-mode: multiply;
       // filter: grayscale(100%);
-      opacity: .8;
+      // opacity: .8;
       max-width: 100%;
       max-height: 100%;
       position: absolute;
@@ -1376,11 +1379,11 @@ footer,
   }
   .organisation-logo:hover {
     // background-color: white;
-    img {
-      filter: none;
-      opacity: 1;
-      // mix-blend-mode: normal;
-    }
+    // img {
+    //   filter: none;
+    //   opacity: 1;
+    //   // mix-blend-mode: normal;
+    // }
   }
 }
 
