--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -4,9 +4,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-0-phone">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content mdc-elevation--z20">
-        <div class="mdc-typography--headline5">
+        <!-- <div class="mdc-typography--headline5">
           Charity and voluntary sector recruitment
-        </div>
+        </div> -->
         <form id="search-view" class="search-form" action="/search" method="GET">
           <input type="hidden" name="lat" value="">
           <input type="hidden" name="lng" value="">
