--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -852,18 +852,22 @@ hr {
     width: 100%;
     box-sizing: border-box;
     background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.87);
+    border: none;
+    border-radius: 0 0 2px 2px;
     h3 {
+      font-size: 0.8rem;
+      opacity: 0.6666;
+      font-weight: 400;
       margin: 0 !important;
-      padding: $unit/2 $unit;
+      padding: $unit/2 $unit 0;
     }
     .tt-suggestion {
       padding: $unit/2 $unit;
     }
     .tt-suggestion:hover,
     .tt-cursor {
-      background-color: $mdc-theme-primary-dark;
-      color: white;
+      background-color: $mdc-theme-complimentary-light;
+      // color: white;
       cursor: pointer;
     }
   }
