--- a/db/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -22,11 +22,11 @@
   <div class="mdc-drawer__content">
     <h2 class="mdc-drawer__content-heading hide-sm">Search jobs</h2>
     <div id="search-tab-bar" class="mdc-tab-bar mdc-tab-bar--fullwidth search-tab-bar" data-mdc-auto-init="MDCTabBar">
-      <a class="mdc-tab mdc-tab--active details-tab" id="detailed-results" onclick="detailsView()">
+      <a href="/search{{request.url.search}}" class="mdc-tab {{#compare request.url.pathname "/search"}}mdc-tab--active{{/compare}} details-tab" id="detailed-results">
         <span class="far fa-list fa-fw" title="Location"></span>
         List
       </a>
-      <a class="mdc-tab map-tab" onclick="mapView()">
+      <a href="/map{{request.url.search}}" class="mdc-tab {{#compare request.url.pathname "/map"}}mdc-tab--active{{/compare}} map-tab">
         <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
         Map
       </a>
