--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -892,12 +892,17 @@ hr {
 }
 
 /* Maps */
+.container-content.container-map {
+  margin-left: -1.5rem;
+  max-width: none !important;
+  padding-right: 0;
+}
 #map-full {
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
-  width: 100vw !important;
-  height: 100vh !important;
+  // position: fixed !important;
+  // top: 0 !important;
+  // left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .map-content {
