--- a/db/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/db/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -32,7 +32,7 @@
       </a>
       <span class="mdc-tab-bar__indicator"></span>
     </div>
-    <form action="/search" method="GET" class="search-form">
+    <form action="/{{#compare request.url.pathname "/map"}}map{{else}}search{{/compare}}" method="GET" class="search-form">
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
