Fixed banner height to 90px to stop flickering on load

--- a/db/configurations/goodmoves/partials/banner-ads.hbs
+++ b/db/configurations/goodmoves/partials/banner-ads.hbs
@@ -1,6 +1,6 @@
 <div class="x-items mdc-theme--secondary-bg">
   <a class="x-item" target="_blank" href="https://scvo.org/services/office-space">
-    <img class="responsive-img" src="https://storage.googleapis.com/elasticsauce.appspot.com/goodmoves/banners/qmu-mpa.jpg" alt="SCVO - JOIN OUR HUB - Edinburgh, Glasgow, Inverness. Affordable shared office space for third sector organisations">
+    <img class="responsive-img" src="https://storage.googleapis.com/elasticsauce.appspot.com/goodmoves/banners/qmu-mpa.jpg" alt="SCVO - JOIN OUR HUB - Edinburgh, Glasgow, Inverness. Affordable shared office space for third sector organisations" height="90">
   </a>
   <a class="x-item-side mdc-theme--on-secondary" href="/advertise">
     <span class="far fa-fw fa-angle-double-left" aria-hidden="true"></span>
