--- a/db/configurations/goodmoves/partials/vacancy/map.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/map.hbs
@@ -20,6 +20,6 @@
     {{/if}}
   </div>
   <div>
-    <a href="/vacancy/{{slug}}" class="mdc-card__action">Find out more</a>
+    <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
   </div>
 </div>
