--- a/db/configurations/goodmoves/partials/vacancy/mini.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/mini.hbs
@@ -2,7 +2,7 @@
   {{> vacancy_key_info}}
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/vacancy/{{slug}}" class="mdc-card__action">Find out more</a>
+      <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
     </div>
     <div class="mdc-card__action-icons pull-right">
       <button type="button" onclick="goodmoves.toggleShortlistItem('{{Id}}');" class="mdc-card__action mdc-card__action--shortlist" title="Add to shortlist">
