TODO message about map result info-window rendering

--- a/db/configurations/goodmoves/templates/vacancies/map.hbs
+++ b/db/configurations/goodmoves/templates/vacancies/map.hbs
@@ -1,3 +1,11 @@
+<!-- 
+  TODO: The stringifying of partial rendering component won't let us 
+  use @root.request... Instead we might want to render the results in 
+  a hidden DIV and pull the HTML from there. This might double up as a 
+  backup in case the map fails to render. The results will still be 
+  there on the page and we can just display the hidden div instead
+-->
+
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content container-map">
