--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2135,28 +2135,7 @@ form#settled_status {
   }
 }
 .credit-union {
-  // .cu-hero {
-  //   background-image: url('https://members.scvocreditunion.scot/images/scvo-hero.png');
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
-  //   background-position: center center;
-  //   display: flex;
-  //   align-items: center;
-  //   padding: $unit*1.5 0;
-  //   .mdc-layout-grid {
-  //     padding: 0 $unit*1.5;
-  //     width: 100%;
-  //     .mdc-button {
-  //       display: inline-grid;
-  //       height: auto;
-  //       width: 100%;
-  //     }
-  //   }
-  //   img {
-  //     display: none;
-  //   }
-  // }
-  .mdc-layout-grid {
+  .page-content .mdc-layout-grid {
     margin-bottom: $unit*1.25;
     width: 100%;
     .mdc-button {
