--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2344,6 +2344,7 @@ body.i-love-charity .page-info,
       margin: $unit*1.2 0;
     }
     .mdc-card {
+      background: transparent;
       box-shadow: none;
       -webkit-box-shadow: none;
       h3 {
