Charter signup starting new process

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -331,6 +331,9 @@ primary-dark: #263238
   .support.funding .mdc-card__primary {
     background-color: map-get($themeFunding, 'primary') !important;
   }
+  .running-your-organisation .support.support-organisation .mdc-card__primary {
+    background-color: map-get($themeCharity, 'primary') !important;
+  }
   .support.support-policy .mdc-card__primary {
     background-color: map-get($themePosts, 'primary') !important;
   }
@@ -2492,7 +2495,7 @@ body.i-love-charity .page-info,
   display: inline-table;
   line-height: 1.96rem;
   outline: none;
-  transition: 0.3s;
+  transition: background-color 0.1s linear;
 }
 .mdc-button.mdc-button--raised.pull-right {
   margin-top: $unit/2;
