--- a/db/configurations/scvo/layouts/default.hbs
+++ b/db/configurations/scvo/layouts/default.hbs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head prefix="og: http://ogp.me/ns#">
-  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <base href="/">
   <!--{section:head}-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
