--- a/db/configurations/scvo/templates/pages/page-head-tags.hbs
+++ b/db/configurations/scvo/templates/pages/page-head-tags.hbs
@@ -11,8 +11,8 @@
 <meta property="og:image:width" content="96" data-dynamic="true">
 <meta property="og:image:height" content="96" data-dynamic="true">
 {{#ifAny og_summary description ../og_summary ../description ~}}
-<meta property="og:summary" content="{{default og_summary (default ../og_summary (default description ../description))}}" data-dynamic="true">
-<meta name="description" content="{{default description (default ../description (default og_summary ../og_summary))}}" data-dynamic="true">
+<meta property="og:summary" content="{{{default og_summary (default ../og_summary (default description ../description))}}}" data-dynamic="true">
+<meta name="description" content="{{{default description (default ../description (default og_summary ../og_summary))}}}" data-dynamic="true">
 {{/ifAny ~}}
 {{#if rendered.json_ld ~}}
 <script type="application/ld+json" data-dynamic="true">
