--- a/db/configurations/goodmoves/partials/search-info.hbs
+++ b/db/configurations/goodmoves/partials/search-info.hbs
@@ -4,7 +4,7 @@
   <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
 </div>
 {{else}}
-{{#ifAny phase request.params.query.region request.params.query.sector request.params.query.location request.params.query.job_number request.params.query.q ~}}
+{{#ifAny request.params.query.type request.params.query.regions request.params.query.sectors request.params.query.statuses request.params.query.location request.params.query.job_number request.params.query.q ~}}
 <div class="search-info mdc-elevation--z1">
   No results, please try a different search query
 </div>
